<resources>
    <!-- Facebook Login -->
    <string name="facebook_app_id">973926202744515</string>
    <string name="fb_login_protocol_scheme">fb973926202744515</string>

    <string name="app_name">Vacine</string>
    <string name="create_profile">Criar Perfil</string>
    <string name="name">Nome</string>
    <string name="gender">Genero</string>
    <string name="birthday_date">Data de Nascimento</string>
    <string name="add">Adicionar</string>

    <!-- Genero -->
    <string name="gender_masc">Masculino</string>
    <string name="gender_fem">Feminino</string>
    <string name="vacina_name">Nome</string>
    <string name="vacina_date">Data</string>
    <string name="vacina_place">Local</string>
    <string name="vacina_descricao">Descrição</string>
    <string name="gravar">Gravar</string>
    <string name="apagar">Apagar</string>
    <string name="login">Login</string>
</resources>
