<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="org.vacine.VacinaActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vacina_name"/>
            <EditText
                android:id="@+id/edt_edit_vacina_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vacina_date"/>
            <EditText
                android:id="@+id/edt_edit_vacina_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vacina_place"/>
            <EditText
                android:id="@+id/edt_edit_vacina_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:inputType="textPostalAddress" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_scrollview2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/vacina_descricao"
            android:textSize="16sp"/>

        <EditText
            android:inputType="textMultiLine"
            android:lines="10"
            android:minLines="10"
            android:gravity="start"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/txt_view_edit_vacina_descricao"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_del_vacina"
            android:layout_margin="15dp"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/apagar"
            android:drawableRight="@drawable/ic_delete"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_add_vacina"
            android:layout_margin="15dp"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:drawableRight="@drawable/ic_add"
            android:text="@string/gravar"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>